@@ -39,7 +39,8 @@
 <blockquote>
 <ul class="simple">
 <li>coders/dib.c (WriteDIBImage): Detect arithmetic overflow of
-image_size. Reduce compilation warnings.</li>
+image_size. Reduce compilation warnings.
+(EncodeImage): Reduce compilation warnings.</li>
 <li>coders/locale.c (WriteLOCALEImage): Reduce compilation warnings.</li>
 </ul>
 </blockquote>
